// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emoji > 😺 1`] = `
{
  "body": {
    "end": 2,
    "items": [
      {
        "end": 2,
        "loc": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "😺",
      },
    ],
    "loc": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 2,
  "loc": {
    "end": {
      "column": 3,
      "line": 1,
      "offset": 2,
    },
    "source": "😺",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`multi bytes > こんにちは、世界 1`] = `
{
  "body": {
    "end": 8,
    "items": [
      {
        "end": 8,
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "こんにちは、世界",
      },
    ],
    "loc": {
      "end": {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 8,
  "loc": {
    "end": {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "source": "こんにちは、世界",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`simple > hello,world 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hello,world",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hello,world",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > empty string: '' 1`] = `
{
  "body": {
    "end": 0,
    "items": [],
    "loc": {
      "end": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 0,
  "loc": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "source": "",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include ampersand '&': 'Tom & Jerry' 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "Tom & Jerry",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "Tom & Jerry",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include asterisk '*': '3 * 4' 1`] = `
{
  "body": {
    "end": 5,
    "items": [
      {
        "end": 5,
        "loc": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "3 * 4",
      },
    ],
    "loc": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 5,
  "loc": {
    "end": {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "source": "3 * 4",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include caret '^': 'up^' 1`] = `
{
  "body": {
    "end": 3,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "up^",
      },
    ],
    "loc": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 3,
  "loc": {
    "end": {
      "column": 4,
      "line": 1,
      "offset": 3,
    },
    "source": "up^",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include close braket ']': 'land ] bridge' 1`] = `
{
  "body": {
    "end": 13,
    "items": [
      {
        "end": 13,
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "land ] bridge",
      },
    ],
    "loc": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 13,
  "loc": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": "land ] bridge",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include close paren ')': 'hello :-)' 1`] = `
{
  "body": {
    "end": 9,
    "items": [
      {
        "end": 9,
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hello :-)",
      },
    ],
    "loc": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 9,
  "loc": {
    "end": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "source": "hello :-)",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include colon ':': 'hello: kazupon !' 1`] = `
{
  "body": {
    "end": 16,
    "items": [
      {
        "end": 16,
        "loc": {
          "end": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hello: kazupon !",
      },
    ],
    "loc": {
      "end": {
        "column": 17,
        "line": 1,
        "offset": 16,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 16,
  "loc": {
    "end": {
      "column": 17,
      "line": 1,
      "offset": 16,
    },
    "source": "hello: kazupon !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include comma ',': 'hi, kazupon' 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, kazupon",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hi, kazupon",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include dollar '$': 'hi, $jquery !' 1`] = `
{
  "body": {
    "end": 13,
    "items": [
      {
        "end": 13,
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, $jquery !",
      },
    ],
    "loc": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 13,
  "loc": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": "hi, $jquery !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include dot '.': 'oh my god ...' 1`] = `
{
  "body": {
    "end": 13,
    "items": [
      {
        "end": 13,
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "oh my god ...",
      },
    ],
    "loc": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 13,
  "loc": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": "oh my god ...",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include double quote '"': '"awesome" !' 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": ""awesome" !",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": ""awesome" !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include equal '=': 'name = foo' 1`] = `
{
  "body": {
    "end": 10,
    "items": [
      {
        "end": 10,
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "name = foo",
      },
    ],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 10,
  "loc": {
    "end": {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "source": "name = foo",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include escase '\\': 'escase \\ escape !' 1`] = `
{
  "body": {
    "end": 17,
    "items": [
      {
        "end": 17,
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "escase \\ escape !",
      },
    ],
    "loc": {
      "end": {
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 17,
  "loc": {
    "end": {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "source": "escase \\ escape !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include exclamation '!': 'WoW!' 1`] = `
{
  "body": {
    "end": 4,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "WoW!",
      },
    ],
    "loc": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 4,
  "loc": {
    "end": {
      "column": 5,
      "line": 1,
      "offset": 4,
    },
    "source": "WoW!",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include grave '\`': '\`happy!!\`' 1`] = `
{
  "body": {
    "end": 9,
    "items": [
      {
        "end": 9,
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "\`happy!!\`",
      },
    ],
    "loc": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 9,
  "loc": {
    "end": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "source": "\`happy!!\`",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include greater than '>': 'a > b' 1`] = `
{
  "body": {
    "end": 5,
    "items": [
      {
        "end": 5,
        "loc": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "a > b",
      },
    ],
    "loc": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 5,
  "loc": {
    "end": {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "source": "a > b",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include hash '#': '# curry !' 1`] = `
{
  "body": {
    "end": 9,
    "items": [
      {
        "end": 9,
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "# curry !",
      },
    ],
    "loc": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 9,
  "loc": {
    "end": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "source": "# curry !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include hypenate '-': 'hi, kazu-pon !' 1`] = `
{
  "body": {
    "end": 14,
    "items": [
      {
        "end": 14,
        "loc": {
          "end": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, kazu-pon !",
      },
    ],
    "loc": {
      "end": {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 14,
  "loc": {
    "end": {
      "column": 15,
      "line": 1,
      "offset": 14,
    },
    "source": "hi, kazu-pon !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include less than '<': 'a < b' 1`] = `
{
  "body": {
    "end": 5,
    "items": [
      {
        "end": 5,
        "loc": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "a < b",
      },
    ],
    "loc": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 5,
  "loc": {
    "end": {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "source": "a < b",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include new line '\\n': 'hello\\nworld' 1`] = `
{
  "body": {
    "end": 12,
    "items": [
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hello\\nworld",
      },
    ],
    "loc": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hello\\nworld",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include open braket '[': 'land [ bridge' 1`] = `
{
  "body": {
    "end": 13,
    "items": [
      {
        "end": 13,
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "land [ bridge",
      },
    ],
    "loc": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 13,
  "loc": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": "land [ bridge",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include open paren '(': '(foo)' 1`] = `
{
  "body": {
    "end": 5,
    "items": [
      {
        "end": 5,
        "loc": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "(foo)",
      },
    ],
    "loc": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 5,
  "loc": {
    "end": {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "source": "(foo)",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include plus '+': '1 + 1' 1`] = `
{
  "body": {
    "end": 5,
    "items": [
      {
        "end": 5,
        "loc": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "1 + 1",
      },
    ],
    "loc": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 5,
  "loc": {
    "end": {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "source": "1 + 1",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include semi-colon ';': 'morning; afternoon;' 1`] = `
{
  "body": {
    "end": 19,
    "items": [
      {
        "end": 19,
        "loc": {
          "end": {
            "column": 20,
            "line": 1,
            "offset": 19,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "morning; afternoon;",
      },
    ],
    "loc": {
      "end": {
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 19,
  "loc": {
    "end": {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "source": "morning; afternoon;",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include single quote ''': 'I'm kazupon !' 1`] = `
{
  "body": {
    "end": 13,
    "items": [
      {
        "end": 13,
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "I'm kazupon !",
      },
    ],
    "loc": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 13,
  "loc": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": "I'm kazupon !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include space ' ': 'hello nworld' 1`] = `
{
  "body": {
    "end": 12,
    "items": [
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hello nworld",
      },
    ],
    "loc": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hello nworld",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include tilde '~': '~~kazupon~~' 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "~~kazupon~~",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "~~kazupon~~",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`special characters > include underscore '_': 'hi, kazu_pon !' 1`] = `
{
  "body": {
    "end": 14,
    "items": [
      {
        "end": 14,
        "loc": {
          "end": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, kazu_pon !",
      },
    ],
    "loc": {
      "end": {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 14,
  "loc": {
    "end": {
      "column": 15,
      "line": 1,
      "offset": 14,
    },
    "source": "hi, kazu_pon !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`unicode > '\\u{0041}' 1`] = `
{
  "body": {
    "end": 1,
    "items": [
      {
        "end": 1,
        "loc": {
          "end": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "A",
      },
    ],
    "loc": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 1,
  "loc": {
    "end": {
      "column": 2,
      "line": 1,
      "offset": 1,
    },
    "source": "A",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`unicode > '\\u0041' 1`] = `
{
  "body": {
    "end": 1,
    "items": [
      {
        "end": 1,
        "loc": {
          "end": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "A",
      },
    ],
    "loc": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 1,
  "loc": {
    "end": {
      "column": 2,
      "line": 1,
      "offset": 1,
    },
    "source": "A",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`unicode > surrogate pair: '\\uD83C\\uDF4E' 1`] = `
{
  "body": {
    "end": 2,
    "items": [
      {
        "end": 2,
        "loc": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "🍎",
      },
    ],
    "loc": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 2,
  "loc": {
    "end": {
      "column": 3,
      "line": 1,
      "offset": 2,
    },
    "source": "🍎",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;
